hphp/hack/test/typecheck/reified_generics/new_classname.php.exp
ERROR: File "new_classname.php", line 8, characters 3-10:
All type arguments must be specified because a type parameter is reified (Typing[4303])
  File "new_classname.php", line 3, characters 23-23:
  Definition is here
ERROR: File "new_classname.php", line 13, characters 3-10:
All type arguments must be specified because a type parameter is reified (Typing[4303])
  File "new_classname.php", line 3, characters 23-23:
  Definition is here
